add ssome code to know what is online subsystem and see if we have online subsystem (NULL) or not and also SessionInterface

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,3 +19,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="OnlinePlatformsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="OnlinePlatformsCharacter")
 
+[OnlineSubsystem]
+DefaultPlatformService=NULL
